Merge de editar contraseña y envío de chat